--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "path": "^0.12.7",
     "react": "^16.4.0",
     "react-copy-to-clipboard": "^5.0.1",
+    "react-google-maps": "^9.4.5",
     "react-media": "^1.8.0",
     "sequelize": "^4.37.10"
   },
