--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "homepage" : "https://whispering-peak-26762.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3010/",
