--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffeeConnect",
-  "homepage" : "https://whispering-peak-26762.herokuapp.com/",
+  "homepage": "https://whispering-peak-26762.herokuapp.com/",
   "version": "1.0.0",
   "description": "**Coffee Connect** is a mobile-first app designed to help remote teams communicate and find nearby coffee shops and cafes where they can connect and get work done. Using the power of Google Maps API, Coffee Connect identifies venues that are conveniently located, displays business hours and other info, and shows the most convenient routes to get there. This project utilizes Passport, Express, Sequelize and BCrypt on the back end, Firebase and MySQL for database support, and CSS3 and Bootstrap a lightweight responsive front end design.",
   "main": "server.js",
@@ -22,6 +22,7 @@
     "url": "https://github.com/jdvera/coffeeV2/issues"
   },
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "bcrypt": "^2.0.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
