--- a/client/package.json
+++ b/client/package.json
@@ -1,21 +1,21 @@
 {
   "name": "client",
-  "homepage" : "https://whispering-peak-26762.herokuapp.com/",
+  "homepage" : "https://coffee-connect.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3010/",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
   },
   "devDependencies": {}
 }
