--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "server": "node server.js",
     "client": "cd client && npm run start",
     "start": "concurrently \"nodemon server.js --config nodemon.json\" \"npm run client\"",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
