--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage" : "https://coffee-connect.herokuapp.com/",
+  "homepage": "https://coffee-connect.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3010/",
@@ -13,7 +13,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.3.2",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-device-detect": "^1.6.1",
     "react-dom": "^16.3.2",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
